--- a/src/assets/scss/base/colors.scss
+++ b/src/assets/scss/base/colors.scss
@@ -1,5 +1,5 @@
-$__primarycolor:#ff9b44;
-$__primarycolor-hover: #fd8e2d;
+$__primarycolor:#4763E4;
+$__primarycolor-hover: #18225C;
 $__secondarycolor:#1f1f1f;
 $__whitecolor:#fff;
 $__orangecolor:#fbc418;
@@ -46,7 +46,7 @@ $__red: #fb1612;
 $__green: #28a745;
 $__dull-gold: #f4c150;
 $__dark__blue: #272b41;
-$__sky__blue: #0d6efd; 
+$__sky__blue: #0d6efd;
 $__gray__cloud: #999;
 $__dark__gray__cloud: #9f9f9f;
 $__steel__blue: #216ef4;
