--- a/src/assets/scss/base/colors.scss
+++ b/src/assets/scss/base/colors.scss
@@ -1,4 +1,4 @@
-$__primarycolor:#ff9b44;
+$__primarycolor:#4763E4;
 $__primarycolor-hover: #fd8e2d;
 $__secondarycolor:#1f1f1f;
 $__whitecolor:#fff;
