--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1498,14 +1498,14 @@ ul {
 
 .bg-primary,
 .badge-primary {
-  background-color: #4763E4 !important;
+  background-color: #4256D0 !important;
 }
 
 a.bg-primary:focus,
 a.bg-primary:hover,
 button.bg-primary:focus,
 button.bg-primary:hover {
-  background-color: #4763E4 !important;
+  background-color: #4256D0 !important;
 }
 
 .bg-success,
@@ -1566,11 +1566,11 @@ button.bg-danger:hover {
 }
 
 .text-primary {
-  color: #4763E4 !important;
+  color: #4256D0 !important;
 }
 
 .dropdown-menu li>a.text-primary {
-  color: #4763E4 !important;
+  color: #4256D0 !important;
 }
 
 .dropdown-menu li>a.text-success {
@@ -1618,8 +1618,8 @@ button.bg-danger:hover {
 }
 
 .btn-primary {
-  background-color: #4763E4;
-  border: 1px solid #4763E4;
+  background-color: #4256D0;
+  border: 1px solid #4256D0;
   color: #ffffff !important;
 }
 
@@ -1628,16 +1628,16 @@ button.bg-danger:hover {
 .btn-primary:active,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #18225C;
+  border-color: #18225C;
 }
 
 .btn-primary:focus .open>.dropdown-toggle.btn-primary,
 .btn-primary:hover .open>.dropdown-toggle.btn-primary,
 .btn-primary:active .open>.dropdown-toggle.btn-primary,
 .btn-primary.active .open>.dropdown-toggle.btn-primary {
-  background-color: #4763E4;
-  border: 1px solid #4763E4;
+  background-color: #18225C;
+  border: 1px solid #18225C;
 }
 
 .btn-primary.active.focus .open>.dropdown-toggle.btn-primary.focus,
@@ -1658,20 +1658,20 @@ button.bg-danger:hover {
 .btn-primary .focus:hover .open>.dropdown-toggle.btn-primary.focus,
 .btn-primary .focus:hover .open>.dropdown-toggle.btn-primary:focus,
 .btn-primary .focus:hover .open>.dropdown-toggle.btn-primary:hover {
-  background-color: #4763E4;
-  border: 1px solid #4763E4;
+  background-color: #18225C;
+  border: 1px solid #18225C;
 }
 
 .btn-primary:active:focus,
 .btn-primary:active:hover {
-  background-color: #4763E4;
-  border: 1px solid #4763E4;
+  background-color: #18225C;
+  border: 1px solid #18225C;
 }
 
 .btn-primary .active:not(:disabled):not(.disabled),
 .btn-primary:active:not(:disabled):not(.disabled) {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #18225C;
+  border-color: #18225C;
   color: #ffffff;
 }
 
@@ -1681,8 +1681,8 @@ button.bg-danger:hover {
 }
 
 .btn-primary .show>.btn-primary.dropdown-toggle {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
   color: #ffffff;
 }
 
@@ -1692,8 +1692,8 @@ button.bg-danger:hover {
 
 .btn-primary.disabled,
 .btn-primary:disabled {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
   color: #ffffff;
 }
 
@@ -1752,8 +1752,8 @@ button.bg-danger:hover {
 }
 
 .show>.btn-outline-primary.dropdown-toggle {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
 }
 
 .show>.btn-outline-primary.dropdown-toggle:focus {
@@ -2023,13 +2023,13 @@ button.bg-danger:hover {
 }
 
 .btn-outline-primary {
-  color: #4763E4;
-  border-color: #4763E4;
+  color: #4256D0;
+  border-color: #4256D0;
 }
 
 .btn-outline-primary:hover {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
 }
 
 .btn-outline-primary.focus,
@@ -2039,14 +2039,14 @@ button.bg-danger:hover {
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-  color: #4763E4;
+  color: #4256D0;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .btn-outline-primary:not(:disabled):not(.disabled):active {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
 }
 
 .btn-outline-success {
@@ -2196,22 +2196,22 @@ button.bg-danger:hover {
 .pagination>.active>span,
 .pagination>.active>span:hover,
 .pagination>.active>span:focus {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
 }
 
 .pagination>.active>a,
 .pagination>.active>span {
-  color: #4763E4;
+  color: #4256D0;
 }
 
 .pagination>li>a,
 .pagination>li>span {
-  color: #4763E4;
+  color: #4256D0;
 }
 
 .page-link:hover {
-  color: #4763E4;
+  color: #4256D0;
 }
 
 .page-link:focus {
@@ -2219,8 +2219,8 @@ button.bg-danger:hover {
 }
 
 .page-item.active .page-link {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
 }
 
 .dropdown-menu {
@@ -2241,7 +2241,7 @@ button.bg-danger:hover {
 
 .dropdown-item.active,
 .dropdown-item:active {
-  background-color: #4763E4;
+  background-color: #4256D0;
 }
 
 .navbar-nav__.open--.dropdown-menu {
@@ -2650,7 +2650,7 @@ input[type=file].form-control {
 }
 
 .form-focus .form-control:focus {
-  border-color: #4763E4;
+  border-color: #4256D0;
 }
 
 .form-focus.focused .focus-label {
@@ -2851,15 +2851,15 @@ input[type=file].form-control {
   cursor: pointer;
   color: #ffffff;
   font-size: 24px;
-  background-color: #4763E4;
+  background-color: #4256D0;
   -webkit-animation: spin 4s linear infinite;
   -moz-animation: spin 4s linear infinite;
   animation: spin 4s linear infinite;
 }
 
 .header {
-  background: #4763E4;
-  background: linear-gradient(to right, #4763E4 0%, #18225C 100%);
+  background: #4256D0;
+  background: linear-gradient(to right, #4256D0 0%, #18225C 100%);
   border-bottom: 1px solid transparent;
   height: 60px;
   z-index: 1002;
@@ -3214,7 +3214,7 @@ input[type=file].form-control {
 }
 
 #layout-position .radio input:checked+label {
-  background: #4763E4;
+  background: #4256D0;
   color: #fff;
 }
 
@@ -3314,8 +3314,8 @@ input[type=file].form-control {
   content: "";
   width: 5px;
   height: 5px;
-  border: 5px solid #4763E4;
-  background-color: #4763E4;
+  border: 5px solid #4256D0;
+  background-color: #4256D0;
   z-index: 10;
   position: absolute;
   top: 15px;
@@ -3339,7 +3339,7 @@ input[type=file].form-control {
 
 .sidebar .sidebar-menu ul li.menu-title a,
 .two-col-bar .sidebar-menu ul li.menu-title a {
-  color: #4763E4;
+  color: #4256D0;
   display: inline-block;
   margin-left: auto;
   padding: 0;
@@ -3511,7 +3511,7 @@ input[type=file].form-control {
 
 .sidebar .sidebar-menu ul ul a.active,
 .two-col-bar .sidebar-menu ul ul a.active {
-  color: #4763E4;
+  color: #4256D0;
   text-decoration: underline;
 }
 
@@ -3706,7 +3706,7 @@ input[type=file].form-control {
 }
 
 .sidebar-twocol.sidebar .sidebar-left {
-  background: #4763E4;
+  background: #4256D0;
   width: 70px;
   padding: 10px;
 }
@@ -3747,7 +3747,7 @@ input[type=file].form-control {
 }
 
 .sidebar-twocol.sidebar .sidebar-right ul li a.active {
-  color: #4763E4;
+  color: #4256D0;
 }
 
 .sidebar-twocol.sidebar .sidebar-right .menu-arrow {
@@ -3886,7 +3886,7 @@ input[type=file].form-control {
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #4763E4;
+  background-color: #4256D0;
 }
 
 .select2-container--default .select2-selection--multiple {
@@ -3934,7 +3934,7 @@ input[type=file].form-control {
 .nav-tabs li a.active {
   border-bottom-width: 2px;
   border-color: transparent;
-  border-bottom-color: #4763E4;
+  border-bottom-color: #4256D0;
   background-color: transparent;
   -webkit-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
@@ -4041,8 +4041,8 @@ input[type=file].form-control {
 }
 
 .nav-tabs .nav-tabs-solid .active {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
   color: #ffffff;
 }
 
@@ -4053,13 +4053,13 @@ input[type=file].form-control {
 }
 
 .nav-tabs.nav-tabs-top li a.active {
-  border-top-color: #4763E4;
+  border-top-color: #4256D0;
   border-width: 2px 0 0 0;
   border-radius: 0;
 }
 
 .nav-tabs.nav-tabs-bottom li a.active {
-  border-bottom-color: #4763E4;
+  border-bottom-color: #4256D0;
   border-width: 0 0 2px 0;
   background: transparent;
   border-radius: 0;
@@ -4071,15 +4071,15 @@ input[type=file].form-control {
 }
 
 .nav-tabs.nav-tabs-solid.nav-tabs-rounded li a.active {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
   color: #ffffff;
   border-radius: 50px;
 }
 
 .nav-tabs.nav-tabs-solid li a.active {
-  background-color: #4763E4;
-  border-color: #4763E4;
+  background-color: #4256D0;
+  border-color: #4256D0;
   color: #ffffff;
   border-radius: 0;
 }
@@ -4309,7 +4309,7 @@ input[type=file].form-control {
 }
 
 .task-board-color .board-primary .board-indicator {
-  background: #4763E4;
+  background: #4256D0;
 }
 
 .task-board-color .board-success .board-indicator {
@@ -4357,8 +4357,8 @@ input[type=file].form-control {
 .continue-btn,
 .cancel-btn {
   background-color: #ffffff;
-  border: 1px solid #4763E4;
-  color: #4763E4 !important;
+  border: 1px solid #4256D0;
+  color: #4256D0 !important;
   display: block;
   font-size: 18px;
   font-weight: 600;
@@ -6188,8 +6188,8 @@ div,
 }
 
 [data-layout-mode=orange] body .header {
-  background: #4763E4;
-  background: linear-gradient(to right, #4763E4 0%, #4763E4 100%);
+  background: #4256D0;
+  background: linear-gradient(to right, #4256D0 0%, #4256D0 100%);
 }
 
 [data-layout-mode=orange] body .header .header-left .logo {
@@ -6315,7 +6315,7 @@ div,
 .total-widget:hover {
   position: relative;
   top: -5px;
-  border-color: #4763E4;
+  border-color: #4256D0;
 }
 
 .total-widget h6 {
@@ -6325,7 +6325,7 @@ div,
 
 .total-widget h4 {
   font-size: 32px;
-  color: #4763E4;
+  color: #4256D0;
   margin: 0;
 }
 
@@ -6352,7 +6352,7 @@ div,
 }
 
 .split-head li .btn:hover {
-  background: #4763E4;
+  background: #4256D0;
   color: #fff;
 }
 
@@ -6442,7 +6442,7 @@ div,
 }
 
 .btn-assign:hover {
-  background: #4763E4;
+  background: #4256D0;
 }
 
 .assets-info {
@@ -6897,7 +6897,7 @@ table.table-new.dataTable>thead .sorting_desc_disabled:focus:before {
   content: "";
   width: 10px;
   height: 10px;
-  border: 2px solid #4763E4;
+  border: 2px solid #4256D0;
   z-index: 2;
   background: #ffffff;
   border-radius: 100%;
@@ -7370,7 +7370,7 @@ table.table-new.dataTable>thead .sorting_desc_disabled:focus:before {
 }
 
 .files-list>li .files-cont .files-info .file-author a {
-  color: #4763E4;
+  color: #4256D0;
   font-size: 12px;
   text-decoration: underline;
 }
@@ -7674,8 +7674,8 @@ table.table-new.dataTable>thead .sorting_desc_disabled:focus:before {
 
 .call-box {
   display: block;
-  background: #4763E4;
-  background: linear-gradient(to right, #4763E4 0%, #fc6075 100%);
+  background: #4256D0;
+  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
   position: sticky;
   top: 0;
   z-index: 99;
@@ -7825,7 +7825,7 @@ table.table-new.dataTable>thead .sorting_desc_disabled:focus:before {
 .fc-state-down,
 .fc-state-active,
 .fc-state-disabled {
-  background-color: #4763E4 !important;
+  background-color: #4256D0 !important;
   color: #ffffff !important;
   text-shadow: none !important;
 }
@@ -7982,7 +7982,7 @@ th.fc-widget-header {
 }
 
 .bg-orange {
-  background-color: #4763E4 !important;
+  background-color: #4256D0 !important;
 }
 
 .card-radio .form-check-input {
@@ -8282,7 +8282,7 @@ textarea.form-control {
 }
 
 .error-page .main-wrapper .error-box h1 {
-  color: #4763E4;
+  color: #4256D0;
   font-size: 10em;
 }
 
@@ -8291,8 +8291,8 @@ textarea.form-control {
 }
 
 .error-page .main-wrapper .error-box .btn-custom {
-  background: #4763E4;
-  background: linear-gradient(to right, #4763E4 0%, #fc6075 100%);
+  background: #4256D0;
+  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
   color: #ffffff;
 }
 
@@ -8310,7 +8310,7 @@ textarea.form-control {
 
 .dash-widget .card-body .dash-widget-icon {
   background-color: rgba(0, 197, 251, 0.2);
-  color: #4763E4;
+  color: #4256D0;
   font-size: 30px;
   height: 60px;
   line-height: 60px;
@@ -8941,8 +8941,8 @@ textarea.form-control {
 }
 
 .account-page .main-wrapper .account-content .account-box .account-btn {
-  background: #4763E4;
-  background: linear-gradient(to right, #4763E4 0%, #fc6075 100%);
+  background: #4256D0;
+  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
   border: 0;
   display: block;
   font-size: 22px;
@@ -9076,7 +9076,7 @@ textarea.form-control {
 }
 
 #loader-wrapper #loader .loader-ellips .loader-ellips__dot:nth-child(2) {
-  background: #4763E4;
+  background: #4256D0;
   left: 0;
   animation-name: slide;
 }
@@ -9173,8 +9173,8 @@ textarea.form-control {
 }
 
 .add-btn {
-  background-color: #4763E4;
-  border: 1px solid #4763E4;
+  background-color: #4256D0;
+  border: 1px solid #4256D0;
   color: #ffffff;
   float: right;
   font-weight: 500;
@@ -9395,7 +9395,7 @@ textarea.form-control {
 }
 
 .board-view-header .pro-teams .avatar-title {
-  background-color: #4763E4;
+  background-color: #4256D0;
 }
 
 .board-view-header .pro-teams .pro-team-lead h4 {
@@ -9603,11 +9603,11 @@ textarea.form-control {
 }
 
 .kanban-cont .kanban-list.kanban-primary .kanban-header {
-  background-color: #4763E4;
+  background-color: #4256D0;
 }
 
 .kanban-cont .kanban-list.kanban-primary .progress-bar {
-  background-color: #4763E4;
+  background-color: #4256D0;
 }
 
 .chat-main-row {
@@ -9728,7 +9728,7 @@ textarea.form-control {
 }
 
 .chat-main-row .chat-main-wrapper .chat-window .fixed-header .user-details .typing-text {
-  color: #4763E4;
+  color: #4256D0;
   font-size: 12px;
   text-transform: lowercase;
 }
@@ -10249,8 +10249,8 @@ textarea.form-control {
 }
 
 .chat-footer .btn-custom {
-  background: #4763E4;
-  background: linear-gradient(to right, #4763E4 0%, #fc6075 100%);
+  background: #4256D0;
+  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
   color: #ffffff;
 }
 
@@ -10316,7 +10316,7 @@ textarea.form-control {
 }
 
 .search-result u {
-  color: #4763E4;
+  color: #4256D0;
 }
 
 .search-result p {
@@ -10401,8 +10401,8 @@ textarea.form-control {
 }
 
 .roles-menu ul li.active a {
-  border-color: #4763E4;
-  color: #4763E4;
+  border-color: #4256D0;
+  color: #4256D0;
 }
 
 .roles-menu ul li a {
@@ -10415,7 +10415,7 @@ textarea.form-control {
 
 .roles-menu ul li a:hover {
   background-color: #eeeeee;
-  border-color: #4763E4;
+  border-color: #4256D0;
 }
 
 .roles-menu ul li a:hover .role-action {
@@ -10530,7 +10530,7 @@ textarea.form-control {
   opacity: 0;
   width: 12px;
   height: 12px;
-  background: #4763E4;
+  background: #4256D0;
   position: absolute;
   top: 3px;
   left: 3px;
@@ -10596,8 +10596,8 @@ textarea.form-control {
 
 .job-list .job-types {
   background-color: transparent;
-  border: 1px solid #4763E4;
-  color: #4763E4;
+  border: 1px solid #4256D0;
+  color: #4256D0;
   display: inline-block;
   text-align: center;
   border-radius: 4px;
@@ -10605,7 +10605,7 @@ textarea.form-control {
 }
 
 .job-list .job-types:hover {
-  background: #4763E4;
+  background: #4256D0;
   color: #ffffff;
 }
 
@@ -10698,7 +10698,7 @@ textarea.form-control {
   font-family: fontawesome;
   margin: 0;
   position: relative;
-  color: #4763E4;
+  color: #4256D0;
   float: left;
   margin-left: -20px;
   display: block;
@@ -10707,8 +10707,8 @@ textarea.form-control {
 }
 
 .job-btn {
-  border: 2px solid #4763E4;
-  color: #4763E4;
+  border: 2px solid #4256D0;
+  color: #4256D0;
   display: block;
   font-size: 16px;
   font-weight: 600;
@@ -10721,7 +10721,7 @@ textarea.form-control {
 }
 
 .job-btn:hover {
-  background-color: #4763E4;
+  background-color: #4256D0;
   color: #ffffff;
 }
 
@@ -10731,7 +10731,7 @@ textarea.form-control {
 }
 
 .info-list span {
-  color: #4763E4;
+  color: #4256D0;
   float: left;
   font-size: 20px;
   line-height: 14px;
@@ -10870,7 +10870,7 @@ button.close {
 }
 
 .bg-sidebarcolor.bg-oranges {
-  background: #4763E4;
+  background: #4256D0;
 }
 
 .bg-sidebarcolor.bg-darkset {
@@ -10952,8 +10952,8 @@ button.close {
 }
 
 .profile-view .profile-basic .profile-info-left .staff-msg .btn-custom {
-  background: #4763E4;
-  background: linear-gradient(to right, #4763E4 0%, #fc6075 100%);
+  background: #4256D0;
+  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
   color: #ffffff;
 }
 
@@ -11194,12 +11194,12 @@ button.close {
 }
 
 .topics .topic-title a i {
-  color: #4763E4;
+  color: #4256D0;
   margin-right: 5px;
 }
 
 .topics .topic-title a span {
-  color: #4763E4;
+  color: #4256D0;
 }
 
 .topics .topics-list {
