--- a/src/initialpage/login.css
+++ b/src/initialpage/login.css
@@ -1,13 +1,14 @@
 .login-form {
     max-width: 550px;
-    margin: 50px auto;
-    margin-top: 100px;
+    margin: 0 auto;
+    padding-top: 100px;
+    /* margin-top: 100px; */
 }
 
 .login-form form {
     margin-bottom: 15px;
     background: #fff;
-    padding: 30px;
+    padding: 30px 15px;
 }
 
 .login-form h2 {
