--- a/src/MainPage/index.css
+++ b/src/MainPage/index.css
@@ -74,3 +74,22 @@
     border-radius: 0.375rem;
     padding-left: 10px;
 }
+
+body::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+    background: gainsboro;
+    /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #999;
+    /* color of the scroll thumb */
+    border-radius: 20px;
+    /* roundness of the scroll thumb */
+    border: 3px solid #999;
+    /* creates padding around scroll thumb */
+}
