--- a/src/assets/scss/layout/theme-settings.scss
+++ b/src/assets/scss/layout/theme-settings.scss
@@ -1633,7 +1633,7 @@
                   color: $__whitecolor
               }
               #toggle_btn .bar-icon span {
-                  background-color: $__whitecolor;
+                  background-color: black;
               }
               .page-title-box h3{
                   color: $__whitecolor;
