--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -35,7 +35,7 @@ body {
     color: #566787;
     float: right;
     font-size: 13px;
-    background: #fff;
+    /* background: #fff; */
     border: none;
     min-width: 50px;
     border-radius: 2px;
