--- a/src/assets/css/table2.css
+++ b/src/assets/css/table2.css
@@ -229,7 +229,7 @@ tbody td.active {
 }
 
 .export__file .export__file-btn:hover {
-    background-color: #444;
+    background-color: #ddd;
     transform: scale(1.15);
     cursor: pointer;
 }
@@ -282,7 +282,7 @@ tbody td.active {
 
 .export__file .export__file-options label:hover {
     transform: scale(1.05);
-    background-color: #000;
+    background-color: #ddd;
     cursor: pointer;
 }
 
