--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1456,14 +1456,14 @@ ul {
 
 .bg-primary,
 .badge-primary {
-  background-color: #4256D0 !important;
+  background-color: #1C75BC !important;
 }
 
 a.bg-primary:focus,
 a.bg-primary:hover,
 button.bg-primary:focus,
 button.bg-primary:hover {
-  background-color: #4256D0 !important;
+  background-color: #1C75BC !important;
 }
 
 .bg-success,
@@ -1524,11 +1524,11 @@ button.bg-danger:hover {
 }
 
 .text-primary {
-  color: #4256D0 !important;
+  color: #1C75BC !important;
 }
 
 .dropdown-menu li>a.text-primary {
-  color: #4256D0 !important;
+  color: #1C75BC !important;
 }
 
 .dropdown-menu li>a.text-success {
@@ -1576,8 +1576,8 @@ button.bg-danger:hover {
 }
 
 .btn-primary {
-  background-color: #4256D0;
-  border: 1px solid #4256D0;
+  background-color: #1C75BC;
+  border: 1px solid #1C75BC;
   color: #ffffff !important;
 }
 
@@ -1639,8 +1639,8 @@ button.bg-danger:hover {
 }
 
 .btn-primary .show>.btn-primary.dropdown-toggle {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
   color: #ffffff;
 }
 
@@ -1650,8 +1650,8 @@ button.bg-danger:hover {
 
 .btn-primary.disabled,
 .btn-primary:disabled {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
   color: #ffffff;
 }
 
@@ -1710,8 +1710,8 @@ button.bg-danger:hover {
 }
 
 .show>.btn-outline-primary.dropdown-toggle {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
 }
 
 .show>.btn-outline-primary.dropdown-toggle:focus {
@@ -1981,13 +1981,13 @@ button.bg-danger:hover {
 }
 
 .btn-outline-primary {
-  color: #4256D0;
-  border-color: #4256D0;
+  color: #1C75BC;
+  border-color: #1C75BC;
 }
 
 .btn-outline-primary:hover {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
 }
 
 .btn-outline-primary.focus,
@@ -1997,14 +1997,14 @@ button.bg-danger:hover {
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-  color: #4256D0;
+  color: #1C75BC;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .btn-outline-primary:not(:disabled):not(.disabled):active {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
 }
 
 .btn-outline-success {
@@ -2154,22 +2154,22 @@ button.bg-danger:hover {
 .pagination>.active>span,
 .pagination>.active>span:hover,
 .pagination>.active>span:focus {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
 }
 
 .pagination>.active>a,
 .pagination>.active>span {
-  color: #4256D0;
+  color: #1C75BC;
 }
 
 .pagination>li>a,
 .pagination>li>span {
-  color: #4256D0;
+  color: #1C75BC;
 }
 
 .page-link:hover {
-  color: #4256D0;
+  color: #1C75BC;
 }
 
 .page-link:focus {
@@ -2177,8 +2177,8 @@ button.bg-danger:hover {
 }
 
 .page-item.active .page-link {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
 }
 
 .dropdown-menu {
@@ -2199,7 +2199,7 @@ button.bg-danger:hover {
 
 .dropdown-item.active,
 .dropdown-item:active {
-  background-color: #4256D0;
+  background-color: #1C75BC;
 }
 
 .navbar-nav__.open--.dropdown-menu {
@@ -2608,7 +2608,7 @@ input[type=file].form-control {
 }
 
 .form-focus .form-control:focus {
-  border-color: #4256D0;
+  border-color: #1C75BC;
 }
 
 .form-focus.focused .focus-label {
@@ -2809,15 +2809,15 @@ input[type=file].form-control {
   cursor: pointer;
   color: #ffffff;
   font-size: 24px;
-  background-color: #4256D0;
+  background-color: #1C75BC;
   -webkit-animation: spin 4s linear infinite;
   -moz-animation: spin 4s linear infinite;
   animation: spin 4s linear infinite;
 }
 
 .header {
-  background: #4256D0;
-  background: linear-gradient(to right, #4256D0 0%, #18225C 100%);
+  background: #1C75BC;
+  background: linear-gradient(to right, #1C75BC 0%, #18225C 100%);
   border-bottom: 1px solid transparent;
   height: 60px;
   z-index: 1002;
@@ -3172,7 +3172,7 @@ input[type=file].form-control {
 }
 
 #layout-position .radio input:checked+label {
-  background: #4256D0;
+  background: #1C75BC;
   color: #fff;
 }
 
@@ -3272,8 +3272,8 @@ input[type=file].form-control {
   content: "";
   width: 5px;
   height: 5px;
-  border: 5px solid #4256D0;
-  background-color: #4256D0;
+  border: 5px solid #1C75BC;
+  background-color: #1C75BC;
   z-index: 10;
   position: absolute;
   top: 15px;
@@ -3297,7 +3297,7 @@ input[type=file].form-control {
 
 .sidebar .sidebar-menu ul li.menu-title a,
 .two-col-bar .sidebar-menu ul li.menu-title a {
-  color: #4256D0;
+  color: #1C75BC;
   display: inline-block;
   margin-left: auto;
   padding: 0;
@@ -3469,7 +3469,7 @@ input[type=file].form-control {
 
 .sidebar .sidebar-menu ul ul a.active,
 .two-col-bar .sidebar-menu ul ul a.active {
-  color: #4256D0;
+  color: #1C75BC;
   text-decoration: underline;
 }
 
@@ -3664,7 +3664,7 @@ input[type=file].form-control {
 }
 
 .sidebar-twocol.sidebar .sidebar-left {
-  background: #4256D0;
+  background: #1C75BC;
   width: 70px;
   padding: 10px;
 }
@@ -3705,7 +3705,7 @@ input[type=file].form-control {
 }
 
 .sidebar-twocol.sidebar .sidebar-right ul li a.active {
-  color: #4256D0;
+  color: #1C75BC;
 }
 
 .sidebar-twocol.sidebar .sidebar-right .menu-arrow {
@@ -3844,7 +3844,7 @@ input[type=file].form-control {
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #4256D0;
+  background-color: #1C75BC;
 }
 
 .select2-container--default .select2-selection--multiple {
@@ -3892,7 +3892,7 @@ input[type=file].form-control {
 .nav-tabs li a.active {
   border-bottom-width: 2px;
   border-color: transparent;
-  border-bottom-color: #4256D0;
+  border-bottom-color: #1C75BC;
   background-color: transparent;
   -webkit-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
@@ -3999,8 +3999,8 @@ input[type=file].form-control {
 }
 
 .nav-tabs .nav-tabs-solid .active {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
   color: #ffffff;
 }
 
@@ -4011,13 +4011,13 @@ input[type=file].form-control {
 }
 
 .nav-tabs.nav-tabs-top li a.active {
-  border-top-color: #4256D0;
+  border-top-color: #1C75BC;
   border-width: 2px 0 0 0;
   border-radius: 0;
 }
 
 .nav-tabs.nav-tabs-bottom li a.active {
-  border-bottom-color: #4256D0;
+  border-bottom-color: #1C75BC;
   border-width: 0 0 2px 0;
   background: transparent;
   border-radius: 0;
@@ -4029,15 +4029,15 @@ input[type=file].form-control {
 }
 
 .nav-tabs.nav-tabs-solid.nav-tabs-rounded li a.active {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
   color: #ffffff;
   border-radius: 50px;
 }
 
 .nav-tabs.nav-tabs-solid li a.active {
-  background-color: #4256D0;
-  border-color: #4256D0;
+  background-color: #1C75BC;
+  border-color: #1C75BC;
   color: #ffffff;
   border-radius: 0;
 }
@@ -4267,7 +4267,7 @@ input[type=file].form-control {
 }
 
 .task-board-color .board-primary .board-indicator {
-  background: #4256D0;
+  background: #1C75BC;
 }
 
 .task-board-color .board-success .board-indicator {
@@ -4315,8 +4315,8 @@ input[type=file].form-control {
 .continue-btn,
 .cancel-btn {
   background-color: #ffffff;
-  border: 1px solid #4256D0;
-  color: #4256D0 !important;
+  border: 1px solid #1C75BC;
+  color: #1C75BC !important;
   display: block;
   font-size: 18px;
   font-weight: 600;
@@ -6275,7 +6275,7 @@ div,
 .total-widget:hover {
   position: relative;
   top: -5px;
-  border-color: #4256D0;
+  border-color: #1C75BC;
 }
 
 .total-widget h6 {
@@ -6285,7 +6285,7 @@ div,
 
 .total-widget h4 {
   font-size: 32px;
-  color: #4256D0;
+  color: #1C75BC;
   margin: 0;
 }
 
@@ -6312,7 +6312,7 @@ div,
 }
 
 .split-head li .btn:hover {
-  background: #4256D0;
+  background: #1C75BC;
   color: #fff;
 }
 
@@ -6402,7 +6402,7 @@ div,
 }
 
 .btn-assign:hover {
-  background: #4256D0;
+  background: #1C75BC;
 }
 
 .assets-info {
@@ -6857,7 +6857,7 @@ table.table-new.dataTable>thead .sorting_desc_disabled:focus:before {
   content: "";
   width: 10px;
   height: 10px;
-  border: 2px solid #4256D0;
+  border: 2px solid #1C75BC;
   z-index: 2;
   background: #ffffff;
   border-radius: 100%;
@@ -7330,7 +7330,7 @@ table.table-new.dataTable>thead .sorting_desc_disabled:focus:before {
 }
 
 .files-list>li .files-cont .files-info .file-author a {
-  color: #4256D0;
+  color: #1C75BC;
   font-size: 12px;
   text-decoration: underline;
 }
@@ -7634,8 +7634,8 @@ table.table-new.dataTable>thead .sorting_desc_disabled:focus:before {
 
 .call-box {
   display: block;
-  background: #4256D0;
-  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
+  background: #1C75BC;
+  background: linear-gradient(to right, #1C75BC 0%, #fc6075 100%);
   position: sticky;
   top: 0;
   z-index: 99;
@@ -7785,7 +7785,7 @@ table.table-new.dataTable>thead .sorting_desc_disabled:focus:before {
 .fc-state-down,
 .fc-state-active,
 .fc-state-disabled {
-  background-color: #4256D0 !important;
+  background-color: #1C75BC !important;
   color: #ffffff !important;
   text-shadow: none !important;
 }
@@ -7942,7 +7942,7 @@ th.fc-widget-header {
 }
 
 .bg-orange {
-  background-color: #4256D0 !important;
+  background-color: #1C75BC !important;
 }
 
 .card-radio .form-check-input {
@@ -8242,7 +8242,7 @@ textarea.form-control {
 }
 
 .error-page .main-wrapper .error-box h1 {
-  color: #4256D0;
+  color: #1C75BC;
   font-size: 10em;
 }
 
@@ -8251,8 +8251,8 @@ textarea.form-control {
 }
 
 .error-page .main-wrapper .error-box .btn-custom {
-  background: #4256D0;
-  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
+  background: #1C75BC;
+  background: linear-gradient(to right, #1C75BC 0%, #fc6075 100%);
   color: #ffffff;
 }
 
@@ -8903,8 +8903,8 @@ textarea.form-control {
 }
 
 .account-page .main-wrapper .account-content .account-box .account-btn {
-  background: #4256D0;
-  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
+  background: #1C75BC;
+  background: linear-gradient(to right, #1C75BC 0%, #fc6075 100%);
   border: 0;
   display: block;
   font-size: 22px;
@@ -9038,7 +9038,7 @@ textarea.form-control {
 }
 
 #loader-wrapper #loader .loader-ellips .loader-ellips__dot:nth-child(2) {
-  background: #4256D0;
+  background: #1C75BC;
   left: 0;
   animation-name: slide;
 }
@@ -9135,8 +9135,8 @@ textarea.form-control {
 }
 
 .add-btn {
-  background-color: #4256D0;
-  border: 1px solid #4256D0;
+  background-color: #00AEEF;
+  border: 1px solid #00AEEF;
   color: #ffffff;
   float: right;
   font-weight: 500;
@@ -9357,7 +9357,7 @@ textarea.form-control {
 }
 
 .board-view-header .pro-teams .avatar-title {
-  background-color: #4256D0;
+  background-color: #1C75BC;
 }
 
 .board-view-header .pro-teams .pro-team-lead h4 {
@@ -9565,11 +9565,11 @@ textarea.form-control {
 }
 
 .kanban-cont .kanban-list.kanban-primary .kanban-header {
-  background-color: #4256D0;
+  background-color: #1C75BC;
 }
 
 .kanban-cont .kanban-list.kanban-primary .progress-bar {
-  background-color: #4256D0;
+  background-color: #1C75BC;
 }
 
 .chat-main-row {
@@ -9690,7 +9690,7 @@ textarea.form-control {
 }
 
 .chat-main-row .chat-main-wrapper .chat-window .fixed-header .user-details .typing-text {
-  color: #4256D0;
+  color: #1C75BC;
   font-size: 12px;
   text-transform: lowercase;
 }
@@ -10211,8 +10211,8 @@ textarea.form-control {
 }
 
 .chat-footer .btn-custom {
-  background: #4256D0;
-  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
+  background: #1C75BC;
+  background: linear-gradient(to right, #1C75BC 0%, #fc6075 100%);
   color: #ffffff;
 }
 
@@ -10278,7 +10278,7 @@ textarea.form-control {
 }
 
 .search-result u {
-  color: #4256D0;
+  color: #1C75BC;
 }
 
 .search-result p {
@@ -10363,8 +10363,8 @@ textarea.form-control {
 }
 
 .roles-menu ul li.active a {
-  border-color: #4256D0;
-  color: #4256D0;
+  border-color: #1C75BC;
+  color: #1C75BC;
 }
 
 .roles-menu ul li a {
@@ -10377,7 +10377,7 @@ textarea.form-control {
 
 .roles-menu ul li a:hover {
   background-color: #eeeeee;
-  border-color: #4256D0;
+  border-color: #1C75BC;
 }
 
 .roles-menu ul li a:hover .role-action {
@@ -10492,7 +10492,7 @@ textarea.form-control {
   opacity: 0;
   width: 12px;
   height: 12px;
-  background: #4256D0;
+  background: #1C75BC;
   position: absolute;
   top: 3px;
   left: 3px;
@@ -10558,8 +10558,8 @@ textarea.form-control {
 
 .job-list .job-types {
   background-color: transparent;
-  border: 1px solid #4256D0;
-  color: #4256D0;
+  border: 1px solid #1C75BC;
+  color: #1C75BC;
   display: inline-block;
   text-align: center;
   border-radius: 4px;
@@ -10567,7 +10567,7 @@ textarea.form-control {
 }
 
 .job-list .job-types:hover {
-  background: #4256D0;
+  background: #1C75BC;
   color: #ffffff;
 }
 
@@ -10660,7 +10660,7 @@ textarea.form-control {
   font-family: fontawesome;
   margin: 0;
   position: relative;
-  color: #4256D0;
+  color: #1C75BC;
   float: left;
   margin-left: -20px;
   display: block;
@@ -10669,8 +10669,8 @@ textarea.form-control {
 }
 
 .job-btn {
-  border: 2px solid #4256D0;
-  color: #4256D0;
+  border: 2px solid #1C75BC;
+  color: #1C75BC;
   display: block;
   font-size: 16px;
   font-weight: 600;
@@ -10683,7 +10683,7 @@ textarea.form-control {
 }
 
 .job-btn:hover {
-  background-color: #4256D0;
+  background-color: #1C75BC;
   color: #ffffff;
 }
 
@@ -10693,7 +10693,7 @@ textarea.form-control {
 }
 
 .info-list span {
-  color: #4256D0;
+  color: #1C75BC;
   float: left;
   font-size: 20px;
   line-height: 14px;
@@ -10832,7 +10832,7 @@ button.close {
 }
 
 .bg-sidebarcolor.bg-oranges {
-  background: #4256D0;
+  background: #1C75BC;
 }
 
 .bg-sidebarcolor.bg-darkset {
@@ -10914,8 +10914,8 @@ button.close {
 }
 
 .profile-view .profile-basic .profile-info-left .staff-msg .btn-custom {
-  background: #4256D0;
-  background: linear-gradient(to right, #4256D0 0%, #fc6075 100%);
+  background: #1C75BC;
+  background: linear-gradient(to right, #1C75BC 0%, #fc6075 100%);
   color: #ffffff;
 }
 
@@ -11156,12 +11156,12 @@ button.close {
 }
 
 .topics .topic-title a i {
-  color: #4256D0;
+  color: #1C75BC;
   margin-right: 5px;
 }
 
 .topics .topic-title a span {
-  color: #4256D0;
+  color: #1C75BC;
 }
 
 .topics .topics-list {
@@ -11388,5 +11388,6 @@ button.close {
 .offcanvas-backdrop.show {
   opacity: 0;
 }
+
 
 /*# sourceMappingURL=style.css.map */
