--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2182,7 +2182,8 @@ button.bg-danger:hover {
 }
 
 .dropdown-menu {
-  background-color: #ffffff;
+  background-color: #fff;
+  width: 13rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: inherit;
   font-size: 14px;
