--- a/src/assets/css/table2.css
+++ b/src/assets/css/table2.css
@@ -120,9 +120,9 @@ tbody tr.hide {
     transform: translateX(100%);
 }
 
-/* tbody tr:hover {
+tbody tr:hover {
     background-color: #fff6 !important;
-} */
+}
 
 tbody tr td,
 tbody tr td p,
@@ -188,13 +188,9 @@ thead th span.icon-arrow {
     transition: .2s ease-in-out;
 }
 
-thead th:hover span.icon-arrow {
-    border: 1.4px solid#fff5;
-}
 
-thead th:hover {
-    color: #fff5;
-}
+
+
 
 thead th.active span.icon-arrow {
     background-color: #fff5;
@@ -208,82 +204,4 @@ thead th.asc span.icon-arrow {
 thead th.active,
 tbody td.active {
     color: #fff5;
-}
-
-.export__file {
-    position: relative;
-}
-
-.export__file .export__file-btn {
-    display: inline-block;
-    width: 2rem;
-    height: 2rem;
-    /* background: #fff6 url(images/export.png) center / 80% no-repeat; */
-    border-radius: 50%;
-    transition: .2s ease-in-out;
-    color: #000;
-    background-color: #000;
-}
-
-.export__file .export__file-btn:hover {
-    background-color: #ddd;
-    transform: scale(1.15);
-    cursor: pointer;
-}
-
-.export__file input {
-    display: none;
-}
-
-.export__file .export__file-options {
-    position: absolute;
-    right: 0;
-
-    width: 12rem;
-    border-radius: .5rem;
-    overflow: hidden;
-    text-align: center;
-
-    opacity: 0;
-    transform: scale(.8);
-    transform-origin: top right;
-
-    box-shadow: 0 .2rem .5rem #0004;
-
-    transition: .2s;
-}
-
-.export__file input:checked+.export__file-options {
-    opacity: 1;
-    transform: scale(1);
-    z-index: 100;
-}
-
-.export__file .export__file-options label {
-    display: block;
-    width: 100%;
-    padding: .6rem 0;
-    background-color: #f2f2f2;
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    transition: .2s ease-in-out;
-}
-
-.export__file .export__file-options label:first-of-type {
-    padding: 1rem 0;
-    background-color: #86e49d !important;
-}
-
-.export__file .export__file-options label:hover {
-    transform: scale(1.05);
-    background-color: #ddd;
-    cursor: pointer;
-}
-
-.export__file .export__file-options img {
-    width: 2rem;
-    height: auto;
 }
