--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -1,4 +1,4 @@
-.table-responsive {
+/* .table-responsive {
     margin: 30px 0;
 }
 
@@ -74,7 +74,7 @@ table.table-striped tbody tr:nth-of-type(odd) {
 }
 
 table.table-striped.table-hover tbody tr:hover {
-    /* background: #f5f5f5; */
+    background: #f5f5f5;
 }
 
 table.table th i {
@@ -186,4 +186,4 @@ table.table .avatar {
     float: left;
     margin-top: 10px;
     font-size: 13px;
-}
+} */
