--- a/src/MainPage/index.css
+++ b/src/MainPage/index.css
@@ -171,9 +171,9 @@ body::-webkit-scrollbar-thumb {
 
 .rdt_TableCell {
     text-overflow: ellipsis;
-    overflow: hidden;
+    overflow: auto;
     border: 1px solid #eeeeee;
-
+    text-align: center;
 
 }
 
@@ -218,6 +218,9 @@ body::-webkit-scrollbar-thumb {
 .jlPZUL {
     color: #1C75BC;
 }
+
+
+
 
 /* .current-date {
     background-color: gainsboro;
