--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2191,7 +2191,22 @@ button.bg-danger:hover {
   transform-origin: left top 0;
   -webkit-transform-origin: left top 0;
   -ms-transform-origin: left top 0;
+  margin-right: 100px;
 }
+
+/* .dropdown-menu {
+  width: 13rem;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+  border-radius: 3px;
+  position: absolute;
+  top: 40px;
+  left: 30px;
+  z-index: 1;
+  display: none;
+} */
 
 .card {
   border: 1px solid #f0f0f0;
