--- a/src/initialpage/login.css
+++ b/src/initialpage/login.css
@@ -1,6 +1,14 @@
 .cover-bg {
     background-image: url(../assets/img/Login.jpg);
     height: 100vh;
+    background-repeat: no-repeat;
+    background-color: #fffffff2;
+    background-blend-mode: lighten;
+}
+
+.cover2-bg {
+    background-image: url(../assets/img/Login.jpg);
+    /* height: 100vh; */
     padding-bottom: 50px;
     background-repeat: no-repeat;
     background-color: #fffffff2;
