Staff dashboard updated

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1480,7 +1480,7 @@ button.bg-success:hover {
 
 .bg-info,
 .badge-info {
-  background-color: #1C75BC !important;
+  background-color: #00AEEF !important;
 }
 
 a.bg-info:focus,
