--- a/src/MainPage/index.css
+++ b/src/MainPage/index.css
@@ -252,3 +252,12 @@ body::-webkit-scrollbar-thumb {
     text-overflow: ellipsis;
     /* Show ellipsis (...) for truncated content */
 }
+
+.is-invalid {
+    border-color: #dc3545;
+    padding-right: calc(1.5em + 0.75rem);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23dc3545' d='M6.3 0L4 2.3 1.7 0 .3.3 2.5 3 0 5.7l.3.3L4 3.7 6.3 6l.3-.3L5.7 4l2.7-2.7L6.3 0z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: center right calc(0.375em + 0.1875rem);
+    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
