--- a/src/MainPage/index.css
+++ b/src/MainPage/index.css
@@ -261,3 +261,23 @@ body::-webkit-scrollbar-thumb {
     background-position: center right calc(0.375em + 0.1875rem);
     background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
+
+.background-logo {
+    position: relative;
+    background-image: url('../assets/img/logo.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.background-logo:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffffc6;
+    /* Adjust the opacity/fade as needed */
+    z-index: -1;
+}
