--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300;400;500;700;900&display=swap'); */
 
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500&family=Oswald:wght@700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500&family=Oswald:wght@700&display=swap'); */
 
 /****** UTILS ******/
 /*** default values ***/
