--- a/src/MainPage/index.css
+++ b/src/MainPage/index.css
@@ -281,3 +281,70 @@ body::-webkit-scrollbar-thumb {
     /* Adjust the opacity/fade as needed */
     z-index: -1;
 }
+
+@keyframes ldio-myosbd5c33i {
+    0% {
+        opacity: 1
+    }
+
+    50% {
+        opacity: .5
+    }
+
+    100% {
+        opacity: 1
+    }
+}
+
+.ldio-myosbd5c33i div {
+    position: absolute;
+    width: 20px;
+    height: 80px;
+    top: 60px;
+    animation: ldio-myosbd5c33i 2.272727272727273s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+}
+
+.ldio-myosbd5c33i div:nth-child(1) {
+    transform: translate(30px, 0);
+    background: #00aeef;
+    animation-delay: -1.3636363636363635s;
+}
+
+.ldio-myosbd5c33i div:nth-child(2) {
+    transform: translate(70px, 0);
+    background: #028ee1;
+    animation-delay: -0.9090909090909092s;
+}
+
+.ldio-myosbd5c33i div:nth-child(3) {
+    transform: translate(110px, 0);
+    background: #00aeef;
+    animation-delay: -0.4545454545454546s;
+}
+
+.ldio-myosbd5c33i div:nth-child(4) {
+    transform: translate(150px, 0);
+    background: #1c75bc;
+    animation-delay: -2.272727272727273s;
+}
+
+.loadingio-spinner-bars-xdw4mmf02v {
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.ldio-myosbd5c33i {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: translateZ(0) scale(1);
+    backface-visibility: hidden;
+    transform-origin: 0 0;
+    /* see note above */
+}
+
+.ldio-myosbd5c33i div {
+    box-sizing: content-box;
+}
