--- a/src/assets/scss/base/colors.scss
+++ b/src/assets/scss/base/colors.scss
@@ -122,8 +122,8 @@ $__light__chilli__pepper: #fc6075;
 $__successcolor: #55ce63;
 $__successgreen: #35BA67;
 $__successcolor-hover: #699834;
-$__infocolor: #009efb;
-$__infocolor-hover: #028ee1;
+$__infocolor: #405189;
+$__infocolor-hover: #405189;
 $__warningcolor: #ffbc34;
 $__orangecolors: #ffb300;
 $__orangecolorslight: #fdfcf3;
