--- a/src/MainPage/HR/Message/message.css
+++ b/src/MainPage/HR/Message/message.css
@@ -1,7 +1,7 @@
 .email-component .nav-pills .nav-link.active {
     background-color: #f8f9fa;
     /* Set the desired background color for the active link */
-    color: #1C75BC;
+    color: #405189;
     /* Set the desired text color for the active link */
 }
 
