--- a/src/initialpage/login.css
+++ b/src/initialpage/login.css
@@ -1,18 +1,18 @@
 .cover-bg {
-    background-image: url(../assets/img/Login.jpg);
+    background-image: url(../assets/img/cover.jpg);
     height: 100vh;
     background-repeat: no-repeat;
-    background-color: #fffffff2;
+    background-color: #405189;
     background-blend-mode: lighten;
     background-size: cover;
 }
 
 .cover2-bg {
-    background-image: url(../assets/img/Login.jpg);
+    background-image: url(../assets/img/cover.jpg);
     /* height: 100vh; */
     padding-bottom: 50px;
     background-repeat: no-repeat;
-    background-color: #fffffff2;
+    background-color: #405189;
     background-blend-mode: lighten;
     background-size: cover;
 }
@@ -26,7 +26,7 @@
 
 .login-form form {
     margin-bottom: 15px;
-    background: #fff;
+    background: #ffffffdb;
     padding: 10px 20px;
 }
 
