--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,6 +8,8 @@
 /***** custom values *****/
 /***** Grid Values *****/
 /** Extends **/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap');
+
 .css-equal-content,
 .css-equal-heights {
   display: flex;
@@ -561,8 +563,7 @@ h6 {
 }
 
 body {
-  font-family: 'Lexend', sans-serif !important;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   color: #1f1f1f;
   background-color: #fff;
