--- a/src/context/error.css
+++ b/src/context/error.css
@@ -1,4 +1,4 @@
-.container {
+.containerr {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -15,7 +15,7 @@
     margin: 3rem 0;
 }
 
-.content .main-heading {
+.contentt .main-heading {
     font-size: 2.5rem;
     font-weight: 700;
 }
